@@ -251,6 +251,9 @@ line:	while(<ARC>) {
 		$moveon = 0;
 		$nopick = 0;
 		$arch = join "_", @values;
+		$print_editor_folder = 1;
+	    } else {
+		$print_editor_folder = 0;
 	    }
 	    if ($var eq "end") {
 		if ($#lface !=0) {
@@ -267,9 +270,6 @@ line:	while(<ARC>) {
 	    if ($var eq "color_fg") {
 		$lfg = $values[0];
 		next line;
-	    }
-	    if ($var eq "end") {
-		print ARCH "editor_folder $pathto\n" if $pathto ne "";
 	    }
 	    if ($var eq "visibility") {
 		$lvis = $values[0];
@@ -342,6 +342,9 @@ line:	while(<ARC>) {
 		next line;  #smoothface must be excluded from archetype file
 	    }
 	    print ARCH $_,"\n";
+	    if ($print_editor_folder) {
+		print ARCH "editor_folder $pathto\n" if $pathto ne "";
+	    }
 	}
 	close(ARC);
     }
